sg-lb.tf
resource "aws_security_group" "sg-lb" {
  name        = var.sg-lb-name
  description = "Allow tls inbound traffic"
  vpc_id      = aws_vpc.ruben_vpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = var.sg-lb-name
  }
}
